--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dva-loading": "^0.2.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "watchjs": "^0.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
