--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "roadhog server",
+    "start": "roadhog server --no-open",
     "build": "roadhog build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint"
@@ -15,6 +15,7 @@
     "classnames": "^2.2.5",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.0",
+    "moment": "^2.17.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "watchjs": "^0.0.0"
@@ -31,7 +32,9 @@
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
     "husky": "^0.12.0",
+    "json-server": "^0.9.4",
     "redbox-react": "^1.3.2",
     "roadhog": "^0.5.2"
-  }
+  },
+  "homepage": "/Min-Admin"
 }
