基本完成物料主文件，但是要改版，改成Modal形式，因为代码冗余太多，编写十分痛苦

--- a/.roadhogrc
+++ b/.roadhogrc
@@ -5,6 +5,11 @@
       "target": "http://www.mitarl.com:8080/webapi",
       "changeOrigin": true,
       "pathRewrite": { "^/api" : "" }
+    },
+    "/fileUpload":{
+      "target": "http://www.mitarl.com:8080/module-operation!executeOperation?operation=FileUpload",
+      "changeOrigin": true,
+      "pathRewrite": { "^/fileUpload" : "" }
     }
   },
   "env": {
