--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "start": "roadhog server --no-open",
     "build": "roadhog build",
     "lint": "eslint --ext .js src test"
-    
   },
   "engines": {
     "install-node": "6.9.2"
@@ -15,9 +14,11 @@
     "classnames": "^2.2.5",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.0",
+    "material-ui": "^0.17.1",
     "moment": "^2.17.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-tap-event-plugin": "^2.0.1",
     "watchjs": "^0.0.0"
   },
   "devDependencies": {
