--- a/.roadhogrc
+++ b/.roadhogrc
@@ -2,14 +2,9 @@
   "entry": "src/index.js",
   "proxy": {
     "/api": {
-      "target": "http://www.mitarl.com:8080/webapi",
+      "target": "http://crm.zhushi/api/",
       "changeOrigin": true,
       "pathRewrite": { "^/api" : "" }
-    },
-    "/fileUpload":{
-      "target": "http://www.mitarl.com:8080/module-operation!executeOperation?operation=FileUpload",
-      "changeOrigin": true,
-      "pathRewrite": { "^/fileUpload" : "" }
     }
   },
   "env": {
@@ -17,13 +12,13 @@
       "extraBabelPlugins": [
         "dva-hmr",
         "transform-runtime",
-		    ["import", { "libraryName": "antd", "style": "css" }]
+		    ["import", { "libraryName": "antd", "style": "css" }],
       ]
     },
     "production": {
       "extraBabelPlugins": [
         "transform-runtime",
-		    ["import", { "libraryName": "antd", "style": "css" }]
+		    ["import", { "libraryName": "antd", "style": "css" }],
       ]
     }
   },
