--- a/.roadhogrc
+++ b/.roadhogrc
@@ -5,6 +5,11 @@
       "target": "http://crm.zhushi/api/",
       "changeOrigin": true,
       "pathRewrite": { "^/api" : "" }
+    },
+    "/zhushi":{
+      "target": "http://crm.zhushi/",
+      "changeOrigin": true,
+      "pathRewrite": { "^/zhushi" : "" }
     }
   },
   "env": {
@@ -12,13 +17,13 @@
       "extraBabelPlugins": [
         "dva-hmr",
         "transform-runtime",
-		    ["import", { "libraryName": "antd", "style": "css" }],
+		    ["import", { "libraryName": "antd", "style": "css" }]
       ]
     },
     "production": {
       "extraBabelPlugins": [
         "transform-runtime",
-		    ["import", { "libraryName": "antd", "style": "css" }],
+		    ["import", { "libraryName": "antd", "style": "css" }]
       ]
     }
   },
