抽提出整个Admin的layout部分进行开源

--- a/.roadhogrc
+++ b/.roadhogrc
@@ -1,17 +1,6 @@
 {
   "entry": "src/index.js",
-  "proxy": {
-    "/api": {
-      "target": "http://crm.zhushi/api/",
-      "changeOrigin": true,
-      "pathRewrite": { "^/api" : "" }
-    },
-    "/zhushi":{
-      "target": "http://crm.zhushi/",
-      "changeOrigin": true,
-      "pathRewrite": { "^/zhushi" : "" }
-    }
-  },
+  "proxy": {},
   "env": {
     "development": {
       "extraBabelPlugins": [
