--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "install-node": "6.9.2"
   },
   "dependencies": {
-    "antd": "^2.6.3",
+    "antd": "^2.8.2",
     "babel-runtime": "^6.9.2",
     "classnames": "^2.2.5",
     "dva": "^1.2.1",
@@ -21,8 +21,7 @@
     "react-dom": "^15.4.0",
     "react-fontawesome": "^1.5.0",
     "react-images": "^0.5.2",
-    "react-tap-event-plugin": "^2.0.1",
-    "watchjs": "^0.0.0"
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -36,7 +35,6 @@
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
     "husky": "^0.12.0",
-    "json-server": "^0.9.4",
     "redbox-react": "^1.3.2",
     "roadhog": "^0.5.2"
   },
