用登录模块作Mock用例
Signed-off-by: Min <dicklwm@163.com>

--- a/.roadhogrc
+++ b/.roadhogrc
@@ -1,6 +1,7 @@
 {
   "entry": "src/index.js",
   "proxy": {},
+  "publicPath": "/Min-Admin/",
   "env": {
     "development": {
       "extraBabelPlugins": [
