--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "expect": "^1.20.2",
     "husky": "^0.12.0",
     "redbox-react": "^1.3.2",
-    "roadhog": "^0.5.2"
+    "roadhog": "^0.5.3"
   },
-  "homepage": "/Min-Admin"
+  "homepage": "Min-Admin"
 }
