修改成展示型
Signed-off-by: Min <dicklwm@163.com>

--- a/.roadhogrc
+++ b/.roadhogrc
@@ -2,6 +2,7 @@
   "entry": "src/index.js",
   "proxy": {},
   "publicPath": "/Min-Admin/",
+  "outputPath":"./build/",
   "env": {
     "development": {
       "extraBabelPlugins": [
