--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "start": "roadhog server --no-open",
     "build": "roadhog build",
-    "lint": "eslint --ext .js src test"
+    "lint": "eslint --ext .js src test",
+    "deploy": "gh-pages -d build"
   },
   "engines": {
     "install-node": "6.9.2"
@@ -34,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
+    "gh-pages": "^0.12.0",
     "husky": "^0.12.0",
     "redbox-react": "^1.3.2",
     "roadhog": "^0.5.3"
